--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   width: 90%;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -58,14 +58,26 @@ header h1 {
 }
 
 header h1:before {
-  content: "./ ";
-  font-size: 24px;
+  content: "./";
+  font-size: 72px;
 }
 
 header h2 {
   font-size: 18px;
   font-weight: 300;
   color: #666;
+}
+
+.simple_link {
+	padding-left: 25px;
+	padding-right: 15px;
+}
+
+#downloads {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 500px;
 }
 
 #downloads .btn {
@@ -161,6 +173,20 @@ pre {
   text-wrap: normal;
   overflow: auto;
   overflow-y: hidden;
+}
+
+.block_item {
+  background: rgba(0, 0, 0, 0.9);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 1.5em;
+  font-size: 16px;
+  color: #FFFFFF;
+  border-radius: 2px;
+  overflow: hidden;
+  position: relative;
 }
 
 table {
